--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ body{
     height: 83px;
     font-size: 40px;
     color: #FFFFFF;
-    padding-left: 15px;
+    padding-left: 30px;
 
 
 }
@@ -44,6 +44,7 @@ body{
     font-size: large;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     margin-top: 33px;
+    cursor: pointer;
     
 }
 
@@ -67,6 +68,7 @@ body{
     height: 120px;
     margin-top: 20px;
     left: 25px;
+    border-radius: 5px;
 
 }
 h2{
